# luma

./: .gitignore  Cargo.toml  README.md  SEMANTICS.md  bst.luma  build.rs  dbg.sh  demo.luma  goals.md  grammar.lalrpop  linkedlist.js  linkedlist.luma  linkedlist2.py  notes.txt  path_trace.luma  phases.md  s.vim  search_users.luma  simple.luma  specification2.txt  std.luma  t  trie.js  trie.py  two_body.js  two_body.luma  two_body.py  two_body_fast.luma  working.vim  working2.vim  working3.vim  working4.vim
benchmarks/: linkedlist.py  trie.luma  two_body.luma  two_body.py
benchmarks/rust_tests/: Cargo.toml
docs/: log.txt
examples/: a_star.luma  base.spec  block_expr_1.rsh  bounding.luma  cross_prog.luma  dynamic_types.rsh  example.rsh  example.txt  examples.py  expr_4.rsh  expr_specified_type.rsh  expressions_check.rsh  full_annotation.luma  function_declaration.rsh  if_then_else_expr_1.rsh  impl.rsh  inference.rsh  layout.md  lex_expr.rsh  lex_expr_3.rsh  longer_typeref.luma  loop_detection.rsh  lowered.rsh  mod_funcs.rsh  modification.rsh  modification2.rsh  modification_simple.rsh  modules.rsh  nested_modules  nested_modules.rsh  new_syntax_1.rsh  operators.rs  patterns_1.rsh  patterns_5_bad.rsh  reference_types.luma  simple_typeref.luma  simpler.luma  struct_1.rsh  struct_with_methods.luma  test.luma  (+6 more)
examples/basic/: basic.rsh  tupletype.rsh
examples/expressions/: block_bad.rsh  lex_expr_2.rsh
examples/functions/: basic.rsh  function_declaration.rsh  generic.rsh  tupletype2.rsh
examples/patterns/: patterns_2.rsh  patterns_3.rsh  patterns_4.rsh
grammar/: grammar.lalrpop  specification.bnf
results/: linkedlist_js.txt  linkedlist_luma.txt  linkedlist_py.txt  linkedlist_rust.txt  nbody_js.txt  nbody_luma.txt  nbody_luma_slow_250.txt  nbody_py_1000.txt  nbody_rust.txt  trie_js.txt  trie_js2.txt  trie_js3.txt  trie_luma.txt  trie_luma2.txt  trie_py.txt  trie_rust.txt  trie_rust2.txt
rust_tests/: Cargo.toml
rust_tests/src/: linkedlist.rs  trie.rs  two_body.rs
src/: ast.rs  avec.rs  bump_interner.rs  errors.rs  grammar.lalrpop  helper.rs  lalrpop_lexer.rs  lex.rs  lib.rs  llvm.rs  lowered.rs  main.rs  monitor.rs  parse.rs  parse_expr.rs  parse_helper.rs  s1.vim  s2.vim
src/ast/: base.rs  deduction.rs  executor.rs  expressions.rs  flat.rs  implementation.rs  interface.rs  linear.rs  lowering.md  mod.rs  newtree.rs  node.rs  outer.rs  quark.rs  quark2.rs  resolve.rs  resolver.rs  resolver2.rs  resolver_old.rs  solver.rs  spatial.rs  tree.rs  tree2.rs  types.rs  types2.rs  types3.rs
src/check/: mod.rs  typecheck.rs
src/compile/: file_tree.rs  mod.rs  parse_tree.rs  per_module.rs  preparse_tree.rs  stager.rs  tree.rs  tree2.rs
src/cst/: cst_traits.rs  declarations.rs  expressions.rs  mod.rs  types.rs
src/drafting/: types3.rs
src/encode/: mod.rs  types.rs
src/lir/: expressions.rs  mod.rs
src/mid_repr/: mod.rs  outer.rs
src/mir/: circles.rs  expressions.rs  flat.rs  instance.rs  mod.rs  node.rs  old_transponster.rs  oracle.rs  (+8 more)
(+39 files in other folders)
