[package]
name = "rsharp"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lazy_static = "1.4.0"
#regex = "1"
logos = "0.11.4"
colored = "1.9"
term_size = "0.3.2"
rangemap = "0.1.3"
crossbeam = "0.7"
rayon = "1.3.1"
evmap = "10.0.2"
chashmap = "2.2.2"
static_assertions = "1.1.0"
dashmap = "4.0.2"
smallvec = "1.6.1"
lasso = { version="0.5.0", features=["multi-threaded", "ahasher"] }

[build-dependencies]
