[package]
name = "luma"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2021"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lazy_static = "1.4.0"
#regex = "1"
logos = "0.11.4"
colored = "1.9"
term_size = "0.3.2"
#rangemap = "0.1.3"
crossbeam = "0.7"
rayon = "1.3.1"
#evmap = "10.0.2"
chashmap = "2.2.2"
static_assertions = "1.1.0"
dashmap = "4.0.2"
smallvec = { version="1.6.1", features=["const_generics"]}
lasso = { version="0.5.0", features=["multi-threaded", "ahasher"] }
#lock_api = "0.4.3"
#atomic-option = "0.1.2"
lazy_static = "1.4.0"
once_cell = "1.7.2"
tokio = { version = "1.8.0", features = ["full"] }
futures = "0.3.15"
async-recursion = "0.3.2"
async-trait = "0.1.50"
staged-builder = "0.1.0"
#parking_lot = "0.11.1"
indent = "0.1.1"
pretty = "0.11.2"
#enum-display-derive = "0.1.1"
derive_more = "*"
strum = "0.24.0"
strum_macros = "*"

boxcar = "0.1.0"

ouroboros = "0.15"

smallstr = { version="*", features=["union"] }

modular-bitfield = "0.11.2"
ifmt = "0.3.3"
either = "1.8.1"

uuid = { version="*", features=["v4"] }
console-subscriber = "0.1.8"
itertools = "0.10.5"

[profile.dev]
incremental = true
panic = "abort"

[profile.release]
lto = true

[build-dependencies]

#[target.aarch64-apple-darwin]
#linker = "clang"
#rustflags = ["-C", "link-arg=-fuse-ld=mold"]

