[package]
name = "rust_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", features = ["small_rng", "simd_support", "packed_simd"] }
hashbrown = "*"

[profile.release]
lto = "fat"
panic = "abort"
